# gfuncs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gfuncs/: auth.py  drive.py  gmail.py
tests/: test_auth.py  test_drive.py  test_gmail.py
